syntax = "proto3";

package simplebank;

option go_package = "/pb";
option java_package = "com.fdsap.simplebank.pb";
option java_multiple_files = true;

import "laptop_message.proto";
import "memory_message.proto";
import "google/api/annotations.proto";

message SearchRequest {
  double max_price = 1;
  string currency = 2;
  uint32 min_cpu_cores = 3;
  double min_cpu_ghz = 4;
  Memory min_ram = 5;
}

message CreateLaptopRequest { 
Laptop laptop = 1; }

message CreateLaptopResponse { 
int64 id = 1; }

message SearchLaptopRequest { 
SearchRequest SearchRequest = 1; }

message SearchLaptopResponse { 
Laptop laptop = 1; }

message UploadImageRequest {
  oneof data {
    ImageInfo info = 1;
    bytes chunk_data = 2;
  };
}

message ImageInfo {
  int64 laptop_id = 1;
  string image_type = 2;
}

message UploadImageResponse {
  int64 id = 1;
  uint32 size = 2;
}

message RateLaptopRequest {
  int64 laptop_id = 1;
  double score = 2;
}

message RateLaptopResponse {
  int64 laptop_id = 1;
  uint32 rated_count = 2;
  double average_score = 3;
}

service LaptopService {

  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {
    option (google.api.http) = {
      post : "/v1/laptop/create"
      body : "*"
    };
  };

  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {
    option (google.api.http) = {
      get : "/v1/laptop/search"
    };
  };

  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {
    option (google.api.http) = {
      post : "/v1/laptop/upload_image"
      body : "*"
    };
  };
  rpc RateLaptop(stream RateLaptopRequest) returns (stream RateLaptopResponse) {
    option (google.api.http) = {
      post : "/v1/laptop/rate"
      body : "*"
    };
  };
}
